--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testimonial challenge</title>
     <link rel="icon" type="image/png" sizes="32x32"
-        href="C:\html code\testimonials-grid-section-main\info\images\favicon-32x32.png">
+        href="images\favicon-32x32.png">
     <link rel="stylesheet" type="text/css" sizes="32x32" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,9 +19,9 @@
         <div class="conjchico" id="conjunto">
             <div id="row1">
                 <div class="con dark" id="con1">
-                    <img src="C:\html code\testimonials-grid-section-main\info\images\bg-pattern-quotation.svg" alt="quotes" id="quotes">
+                    <img src="images\bg-pattern-quotation.svg" alt="quotes" id="quotes">
                     <div class="identif">
-                        <img src="C:\html code\testimonials-grid-section-main\info\images\image-daniel.jpg"
+                        <img src="images\image-daniel.jpg"
                             alt="Image of Daniel">
                         <div class="name">
                             <h3>Daniel Clifford</h3>
@@ -40,7 +40,7 @@
                 </div>
                 <div class="con dark" id="con2">
                     <div class="identif">
-                        <img src="C:\html code\testimonials-grid-section-main\info\images\image-jonathan.jpg"
+                        <img src="images\image-jonathan.jpg"
                             alt="Image of Jonathan">
                         <div class="name">
                             <h3>Jonathan Walters</h3>
@@ -55,7 +55,7 @@
             <div id="row2">
                 <div class="con light" id="con3">
                     <div class="identif">
-                        <img src="C:\html code\testimonials-grid-section-main\info\images\image-jeanette.jpg"
+                        <img src="images\image-jeanette.jpg"
                             alt="Image of Jeanette">
                         <div class="name">
                             <h3>Jeanette Harmon</h3>
@@ -69,7 +69,7 @@
                 </div>
                 <div class="con dark" id="con4">
                     <div class="identif">
-                        <img src="C:\html code\testimonials-grid-section-main\info\images\image-patrick.jpg"
+                        <img src="images\image-patrick.jpg"
                             alt="Image of Patrick">
                         <div class="name">
                             <h3>Patrick Abrams</h3>
@@ -91,7 +91,7 @@
         </div>
         <div class="con light" id="con5">
             <div class="identif">
-                <img src="C:\html code\testimonials-grid-section-main\info\images\image-kira.jpg" alt="Image of Kira">
+                <img src="images\image-kira.jpg" alt="Image of Kira">
                 <div class="name">
                     <h3>Kira Whittle</h3>
                     <h4>Verified graduate</h4>
